[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Skander Hannachi"]
name = "Rust-embedded"
edition = "2024"
version = "0.1.0"


# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "{{project-name}}"
# test = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
cortex-m-semihosting = "0.5"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
